--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,14 @@ dependencies:
   firebase_storage: ^3.1.6
   flutter_staggered_grid_view: ^0.3.0
   carousel_pro: ^1.0.0
-  cloud_firestore: ^0.13.2
+  google_maps_flutter: ^0.5.27+1
+  cloud_firestore: ^0.12.9+4
+  provider: ^3.1.0
+  url_launcher: ^5.5.0
   splashscreen: ^1.2.0
+  fluttertoast: ^7.0.1
+  intl: ^0.16.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -45,24 +51,15 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  # uses-material-design: true
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-
-   assets:
-    - images/user.png
+  assets:
     - images/user_black.png
-    - images/userface.png
-    - images/complaint.png
-    - images/map.png
-    - images/graph.jpg
-    - images/graph1.png
-    - images/msg.png
-    - images/law.jpg
     - images/sewer_image.jpg
+    - images/law.jpg
 
   #  - images/a_dot_ham.jpeg
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
